test/files/neg/ticket513.check
ticket513.scala:6: error: type arguments [NotThatBound] do not conform to trait T's type parameter bounds [A <: Bound]
object Wrong extends Wrap[T[NotThatBound]]
                     ^
one error found
